crates/ruff_python_parser/tests/snapshots/invalid_syntax@multiple_starred_names_in_sequence_pattern.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/inline/err/multiple_starred_names_in_sequence_pattern.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..53,
        body: [
            Match(
                StmtMatch {
                    node_index: NodeIndex(None),
                    range: 0..52,
                    subject: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 6..13,
                            id: Name("subject"),
                            ctx: Load,
                        },
                    ),
                    cases: [
                        MatchCase {
                            range: 19..52,
                            node_index: NodeIndex(None),
                            pattern: MatchSequence(
                                PatternMatchSequence {
                                    node_index: NodeIndex(None),
                                    range: 24..47,
                                    patterns: [
                                        MatchStar(
                                            PatternMatchStar {
                                                node_index: NodeIndex(None),
                                                range: 24..30,
                                                name: Some(
                                                    Identifier {
                                                        id: Name("first"),
                                                        range: 25..30,
                                                        node_index: NodeIndex(None),
                                                    },
                                                ),
                                            },
                                        ),
                                        MatchStar(
                                            PatternMatchStar {
                                                node_index: NodeIndex(None),
                                                range: 32..39,
                                                name: Some(
                                                    Identifier {
                                                        id: Name("second"),
                                                        range: 33..39,
                                                        node_index: NodeIndex(None),
                                                    },
                                                ),
                                            },
                                        ),
                                        MatchStar(
                                            PatternMatchStar {
                                                node_index: NodeIndex(None),
                                                range: 41..47,
                                                name: Some(
                                                    Identifier {
                                                        id: Name("third"),
                                                        range: 42..47,
                                                        node_index: NodeIndex(None),
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                },
                            ),
                            guard: None,
                            body: [
                                Expr(
                                    StmtExpr {
                                        node_index: NodeIndex(None),
                                        range: 49..52,
                                        value: EllipsisLiteral(
                                            ExprEllipsisLiteral {
                                                node_index: NodeIndex(None),
                                                range: 49..52,
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    ],
                },
            ),
        ],
    },
)
```
## Semantic Syntax Errors

  |
1 | match subject:
2 |     case *first, *second, *third: ...
  |                  ^^^^^^^ Syntax Error: multiple starred names in sequence pattern


  |
1 | match subject:
2 |     case *first, *second, *third: ...
  |                           ^^^^^^ Syntax Error: multiple starred names in sequence pattern
